@@ -22,133 +22,129 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public class ProductServiceImpl implements ProductService {
 
-    private final ProductRepository productRepository;
+        private final ProductRepository productRepository;
 
-    // ================== LIST ==================
+        // ================== LIST ==================
 
-    private ProductListItemResponse toListItem(Product p) {
-        return ProductListItemResponse.builder()
-                .id(p.getId())
-                .name(p.getName())
-                .slug(p.getSlug())
-                .thumbnailUrl(p.getThumbnailUrl())
-                .price(p.getBasePrice())
-                .categorySlug(p.getCategory().getSlug())
-                .categoryName(p.getCategory().getName())
-                .createdAt(p.getCreatedAt())
-                .build();
-    }
-
-    @Override
-    public Page<ProductListItemResponse> getProducts(
-            String keyword,
-            String categorySlug,
-            int page,
-            int size,
-            String sortBy) {
-
-        String kw = (keyword == null) ? "" : keyword.trim();
-
-        Sort sort;
-        switch (sortBy) {
-            case "oldest" -> sort = Sort.by("createdAt").ascending();
-            case "priceAsc" -> sort = Sort.by("basePrice").ascending();
-            case "priceDesc" -> sort = Sort.by("basePrice").descending();
-            default -> sort = Sort.by("createdAt").descending(); // newest
+        private ProductListItemResponse toListItem(Product p) {
+                return ProductListItemResponse.builder()
+                                .id(p.getId())
+                                .name(p.getName())
+                                .slug(p.getSlug())
+                                .thumbnailUrl(p.getThumbnailUrl())
+                                .price(p.getBasePrice())
+                                .categorySlug(p.getCategory().getSlug())
+                                .categoryName(p.getCategory().getName())
+                                .createdAt(p.getCreatedAt())
+                                .build();
         }
 
-        Pageable pageable = PageRequest.of(page, size, sort);
+        @Override
+        public Page<ProductListItemResponse> getProducts(
+                        String keyword,
+                        String categorySlug,
+                        Double minPrice,
+                        Double maxPrice,
+                        int page,
+                        int size,
+                        String sortBy) {
 
-        Page<Product> productPage;
-        if (categorySlug != null && !categorySlug.isBlank()) {
-            productPage = productRepository
-                    .findByStatusAndCategory_SlugAndNameContainingIgnoreCase(
-                            "ACTIVE", categorySlug, kw, pageable);
-        } else {
-            productPage = productRepository
-                    .findByStatusAndNameContainingIgnoreCase(
-                            "ACTIVE", kw, pageable);
+                String kw = (keyword == null || keyword.trim().isEmpty()) ? null : keyword.trim();
+                String catSlug = (categorySlug == null || categorySlug.trim().isEmpty()) ? null : categorySlug.trim();
+
+                Sort sort;
+                switch (sortBy) {
+                        case "oldest" -> sort = Sort.by("createdAt").ascending();
+                        case "priceAsc" -> sort = Sort.by("basePrice").ascending();
+                        case "priceDesc" -> sort = Sort.by("basePrice").descending();
+                        default -> sort = Sort.by("createdAt").descending(); // newest
+                }
+
+                Pageable pageable = PageRequest.of(page, size, sort);
+
+                Page<Product> productPage = productRepository.searchProducts(kw, catSlug, minPrice, maxPrice, pageable);
+
+                return productPage.map(this::toListItem);
         }
 
-        return productPage.map(this::toListItem);
-    }
+        // ================== DETAIL ==================
 
-    // ================== DETAIL ==================
+        private ProductImageResponse toImageDto(ProductImage img) {
+                return ProductImageResponse.builder()
+                                .id(img.getId())
+                                .imageUrl(img.getImageUrl())
+                                .thumbnail(img.isThumbnail())
+                                .sortOrder(img.getSortOrder())
+                                .build();
+        }
 
-    private ProductImageResponse toImageDto(ProductImage img) {
-        return ProductImageResponse.builder()
-                .id(img.getId())
-                .imageUrl(img.getImageUrl())
-                .thumbnail(img.isThumbnail())
-                .sortOrder(img.getSortOrder())
-                .build();
-    }
+        private ProductVariantResponse toVariantDto(ProductVariant v, Double basePrice) {
+                Double effectivePrice = (v.getPrice() != null) ? v.getPrice() : basePrice;
 
-    private ProductVariantResponse toVariantDto(ProductVariant v, Double basePrice) {
-        Double effectivePrice = (v.getPrice() != null) ? v.getPrice() : basePrice;
+                return ProductVariantResponse.builder()
+                                .id(v.getId())
+                                .sku(v.getSku())
+                                .color(v.getColor())
+                                .size(v.getSize())
+                                .price(effectivePrice)
+                                .stock(v.getStock())
+                                .status(v.getStatus())
+                                .build();
+        }
 
-        return ProductVariantResponse.builder()
-                .id(v.getId())
-                .sku(v.getSku())
-                .color(v.getColor())
-                .size(v.getSize())
-                .price(effectivePrice)
-                .stock(v.getStock())
-                .status(v.getStatus())
-                .build();
-    }
+        private ProductDetailResponse toDetail(Product p) {
+                // Sort images theo sortOrder rồi id
+                List<ProductImageResponse> imageDtos = p.getImages() == null ? List.of()
+                                : p.getImages()
+                                                .stream()
+                                                .sorted(Comparator
+                                                                .comparing((ProductImage img) -> img
+                                                                                .getSortOrder() == null ? 0
+                                                                                                : img.getSortOrder())
+                                                                .thenComparing(ProductImage::getId))
+                                                .map(this::toImageDto)
+                                                .toList();
 
-    private ProductDetailResponse toDetail(Product p) {
-        // Sort images theo sortOrder rồi id
-        List<ProductImageResponse> imageDtos = p.getImages() == null ? List.of()
-                : p.getImages()
-                        .stream()
-                        .sorted(Comparator
-                                .comparing((ProductImage img) -> img.getSortOrder() == null ? 0 : img.getSortOrder())
-                                .thenComparing(ProductImage::getId))
-                        .map(this::toImageDto)
-                        .toList();
+                // Lọc variants ACTIVE (nếu chưa dùng thì list rỗng)
+                List<ProductVariantResponse> variantDtos = p.getVariants() == null ? List.of()
+                                : p.getVariants()
+                                                .stream()
+                                                .filter(v -> v.getStatus() == null ||
+                                                                "ACTIVE".equalsIgnoreCase(v.getStatus()))
+                                                .map(v -> toVariantDto(v, p.getBasePrice()))
+                                                .toList();
 
-        // Lọc variants ACTIVE (nếu chưa dùng thì list rỗng)
-        List<ProductVariantResponse> variantDtos = p.getVariants() == null ? List.of()
-                : p.getVariants()
-                        .stream()
-                        .filter(v -> v.getStatus() == null ||
-                                "ACTIVE".equalsIgnoreCase(v.getStatus()))
-                        .map(v -> toVariantDto(v, p.getBasePrice()))
-                        .toList();
+                return ProductDetailResponse.builder()
+                                .id(p.getId())
+                                .name(p.getName())
+                                .slug(p.getSlug())
+                                .shortDesc(p.getShortDesc())
+                                .longDesc(p.getLongDesc())
+                                .categorySlug(p.getCategory().getSlug())
+                                .categoryName(p.getCategory().getName())
+                                .basePrice(p.getBasePrice())
+                                .thumbnailUrl(p.getThumbnailUrl())
+                                .status(p.getStatus())
+                                .createdAt(p.getCreatedAt())
+                                .updatedAt(p.getUpdatedAt())
+                                .images(imageDtos)
+                                .variants(variantDtos)
+                                .build();
+        }
 
-        return ProductDetailResponse.builder()
-                .id(p.getId())
-                .name(p.getName())
-                .slug(p.getSlug())
-                .shortDesc(p.getShortDesc())
-                .longDesc(p.getLongDesc())
-                .categorySlug(p.getCategory().getSlug())
-                .categoryName(p.getCategory().getName())
-                .basePrice(p.getBasePrice())
-                .thumbnailUrl(p.getThumbnailUrl())
-                .status(p.getStatus())
-                .createdAt(p.getCreatedAt())
-                .updatedAt(p.getUpdatedAt())
-                .images(imageDtos)
-                .variants(variantDtos)
-                .build();
-    }
+        @Override
+        @Transactional(readOnly = true)
+        public ProductDetailResponse getProductDetailBySlug(String slug) {
+                Product p = productRepository.findBySlugAndStatus(slug, "ACTIVE")
+                                .orElseThrow(() -> new RuntimeException("Product not found"));
+                return toDetail(p);
+        }
 
-    @Override
-    @Transactional(readOnly = true)
-    public ProductDetailResponse getProductDetailBySlug(String slug) {
-        Product p = productRepository.findBySlugAndStatus(slug, "ACTIVE")
-                .orElseThrow(() -> new RuntimeException("Product not found"));
-        return toDetail(p);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public ProductDetailResponse getProductDetailById(Long id) {
-        Product p = productRepository.findByIdAndStatus(id, "ACTIVE")
-                .orElseThrow(() -> new RuntimeException("Product not found"));
-        return toDetail(p);
-    }
+        @Override
+        @Transactional(readOnly = true)
+        public ProductDetailResponse getProductDetailById(Long id) {
+                Product p = productRepository.findByIdAndStatus(id, "ACTIVE")
+                                .orElseThrow(() -> new RuntimeException("Product not found"));
+                return toDetail(p);
+        }
 }
